--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+#Configure mybatis
 
+#Configure the xml Mapping path
+mybatis.mapper-locations=classpath:mapping/*.xml
+#Configure entity category names
+mybatis.type-aliases-package=com.beilin.entity
+#Naming method of open hump
+mybatis.configuration.map-underscore-to-camel-case=true
+
+#data source
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#how to connect
+spring.datasource.driverClassName=org.h2.Driver
+#driver for H2
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+#web interface
+
+spring.put.enable=true
+
+logging.level.org.hibernate.stat=debug
+# Show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
